--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,60 +4,45 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/relative">
+    android:id="@+id/relative"
+    android:background="#fff4fffb">
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout">
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView2" >
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Penal"
-            android:id="@+id/btPenal"
-            android:textColor="#ffeefff6"
-            android:background="#ff1423ff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="false"
-        android:id="@+id/linearLayout2">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="169dp"
-            android:id="@+id/action_bar_activity_content">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Obteciones"
-                android:id="@+id/btObtenciones"
-                android:layout_gravity="center_vertical"
-                android:textColor="#ffc9cbcc"
-                android:background="#ff044b00" />
-        </LinearLayout>
-    </LinearLayout>
+            android:text="Free Kick"
+            android:id="@+id/btFreeKick"
+            android:layout_marginTop="93dp"
+            android:background="#ffbd6619"
+            android:textColor="#ffffffff"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+    </ScrollView>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Perdidas"
-        android:id="@+id/btPerdidas"
-        android:singleLine="true"
-        android:layout_below="@+id/linearLayout2"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_marginTop="161dp"
+        android:layout_below="@+id/btPenal"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Penal"
+        android:id="@+id/btPenal"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#ffa6a8a2"
-        android:shadowColor="#ff6a46ff"
-        android:background="#ff6e0705" />
+        android:background="#ff040449"
+        android:textColor="#ffffffff" />
+
 
 </RelativeLayout>
