--- a/app/src/main/res/layout/activity_penaltys.xml
+++ b/app/src/main/res/layout/activity_penaltys.xml
@@ -234,7 +234,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/txContPenalesV"
+        android:id="@+id/txContFKVisitante"
         android:layout_row="9"
         android:layout_column="15"
         android:layout_above="@+id/btSumarV"
@@ -248,7 +248,7 @@
         android:id="@+id/txContPenales"
         android:layout_row="9"
         android:layout_column="5"
-        android:layout_alignTop="@+id/txContPenalesV"
+        android:layout_alignTop="@+id/txContFKVisitante"
         android:layout_alignEnd="@+id/btsumarPenal"
         android:textColor="#ff040404" />
 
