--- a/app/src/main/res/layout/activity_activity_free_kicks.xml
+++ b/app/src/main/res/layout/activity_activity_free_kicks.xml
@@ -19,11 +19,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|right"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout3"
-        android:layout_alignEnd="@+id/btSumarV">
+        android:id="@+id/linearLayout3">
 
         <RadioGroup
-            android:layout_width="341dp"
+            android:layout_width="match_parent"
             android:layout_height="325dp"
             android:showDividers="beginning"
             android:touchscreenBlocksFocus="true"
@@ -110,7 +109,7 @@
                 android:buttonTint="#ff5206ff" />
 
             <RadioButton
-                android:layout_width="wrap_content"
+                android:layout_width="288dp"
                 android:layout_height="wrap_content"
                 android:text="Simular salida de pelota en el ruck/Maul"
                 android:id="@+id/rbSimularSalidaDePelota"
@@ -126,7 +125,7 @@
                 android:buttonTint="#ff5206ff" />
 
             <RadioButton
-                android:layout_width="wrap_content"
+                android:layout_width="282dp"
                 android:layout_height="wrap_content"
                 android:text="Diferente candidad de jugadores en el line"
                 android:id="@+id/rbCantidadJugadoresLine"
@@ -144,8 +143,8 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Infracciín 1era Linea en el Scrum"
-                android:id="@+id/rbInfracción1raLinea"
+                android:text="Infracción 1era Linea en el Scrum"
+                android:id="@+id/rbInfraccion1raLinea"
                 android:textColor="#ff342c2f"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
@@ -181,7 +180,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sumar Local"
-        android:id="@+id/btsumarPenal"
+        android:id="@+id/btsumarLocalFK"
         android:layout_row="9"
         android:layout_column="0"
         android:layout_alignParentBottom="true"
@@ -192,7 +191,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SumarVisitante"
-        android:id="@+id/btSumarV"
+        android:id="@+id/btSumarVisitanteFK"
         android:layout_row="9"
         android:layout_column="16"
         android:layout_alignParentBottom="true"
@@ -203,7 +202,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/txContFKLocal"
-        android:layout_above="@+id/btsumarPenal"
+        android:layout_above="@+id/btsumarLocalFK"
         android:layout_alignParentStart="true"
         android:layout_marginStart="25dp" />
 
@@ -213,7 +212,7 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/txcontFKVisitante"
         android:layout_alignTop="@+id/txContFKLocal"
-        android:layout_alignStart="@+id/btSumarV"
+        android:layout_alignStart="@+id/btSumarVisitanteFK"
         android:layout_marginStart="32dp" />
 
 </RelativeLayout>
