--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,8 @@
         android:layout_marginTop="145dp"
         android:layout_below="@+id/btPenal"
         android:layout_alignParentStart="true"
-        android:background="#ff1fdc1a" />
+        android:background="#ff1fdc1a"
+        android:textColor="#ffffffff" />
 
     <Button
         android:layout_width="match_parent"
