--- a/app/src/main/res/layout/activity_scrum.xml
+++ b/app/src/main/res/layout/activity_scrum.xml
@@ -15,7 +15,6 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            android:orientation="vertical"
             android:layout_gravity="center"
             android:weightSum="1">
 
@@ -29,7 +28,9 @@
 
             <RadioGroup
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/ll">
 
                 <RadioButton
                     android:layout_width="wrap_content"
@@ -59,33 +60,71 @@
 
             </RadioGroup>
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.09"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView"
+                    android:layout_weight="0.51" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView2"
+                    android:layout_weight="0.29" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView3" />
+            </LinearLayout>
+
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="91dp"
                 android:text="Scrum en Contra"
                 android:id="@+id/rbScrumenContra"
                 android:layout_gravity="center"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Robado"
-                android:id="@+id/rbScrumEnContraRobado"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ff088019" />
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Perdido"
-                android:id="@+id/rbScrumEncontraPerdido"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ff860712" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:checked="false" />
 
             <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/RadioGroupEnContra"
+                android:weightSum="1">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Robado"
+                    android:id="@+id/rbScrumEnContraRobado"
+                    android:textColor="#ff088019"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="0.49" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Perdido"
+                    android:id="@+id/rbScrumEncontraPerdido"
+                    android:textColor="#ff860712"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="0.35" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
@@ -93,7 +132,39 @@
                     android:text="Reseteado"
                     android:id="@+id/rbScrumEnContraReseteado"
                     android:textColor="#ff090fa3" />
+
             </RadioGroup>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="47dp"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView4"
+                    android:layout_weight="0.57" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView5"
+                    android:layout_weight="0.34" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="Small Text"
+                    android:id="@+id/textView6" />
+
+            </LinearLayout>
 
         </RadioGroup>
 
