Srcum por la mitad

--- a/app/src/main/res/layout/activity_scrum.xml
+++ b/app/src/main/res/layout/activity_scrum.xml
@@ -153,24 +153,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/textView4"
-                    android:layout_weight="0.57" />
+                    android:id="@+id/textView3"
+                    android:layout_weight="0.26" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/textView5"
+                    android:id="@+id/txScrumRobado"
+                    android:layout_weight="0.35" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/txScrumECPerdido"
                     android:layout_weight="0.34" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Small Text"
-                    android:id="@+id/textView6" />
+                    android:id="@+id/txScrumECResetado" />
 
             </LinearLayout>
 
