--- a/app/src/main/res/layout/activity_sumar_puntos.xml
+++ b/app/src/main/res/layout/activity_sumar_puntos.xml
@@ -55,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/suma_Converción"
-                android:id="@+id/btSumarConverción"
+                android:id="@+id/btSumarConvercion"
                 android:layout_gravity="center_horizontal"
                 android:checked="false" />
 
@@ -89,12 +89,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:id="@+id/linearLayout2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,20 +134,33 @@
 
         </LinearLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.20"
+        android:weightSum="1"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout2"
+        android:id="@+id/linearLayout4">
+
         <TextView
-            android:layout_width="133dp"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/txTotalPtosLocal"
+            android:text="0"
+            android:layout_weight="1.25" />
+
+        <TextView
+            android:layout_width="127dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/txTotalPtosVisitante"
             android:layout_gravity="right"
-            android:layout_weight="0.20" />
+            android:text="0" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/txTotalPtosLocal"
-            android:layout_weight="0.20" />
     </LinearLayout>
 
 </RelativeLayout>
