--- a/app/src/main/res/layout/activity_main_activity22.xml
+++ b/app/src/main/res/layout/activity_main_activity22.xml
@@ -1,7 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#020099cc"
-    tools:context="com.holamundo.alejandro.alejandro123.MostrarEstadisticasPenales">
+    tools:context="com.holamundo.alejandro.alejandro123.MostrarEstadisticasPenales"
+    android:scrollbars="horizontal|vertical">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -43,7 +44,8 @@
         android:layout_gravity="left"
         android:id="@+id/layoutsinid"
         android:scrollbarAlwaysDrawHorizontalTrack="true"
-        android:scrollbarAlwaysDrawVerticalTrack="true">
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbars="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,7 +58,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView30"
+            android:id="@+id/txCargaSinPelotaLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -64,7 +66,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView9"
+            android:id="@+id/txDerrumbeMaulLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -72,7 +74,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView32"
+            android:id="@+id/txEntradaCostadoLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -80,7 +82,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView14"
+            android:id="@+id/txCargaEnElLineLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -88,7 +90,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView16"
+            android:id="@+id/txManosEnElRuckLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -96,7 +98,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView15"
+            android:id="@+id/txOffSideLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -104,7 +106,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView10"
+            android:id="@+id/txScrumPenalLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -112,7 +114,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView13"
+            android:id="@+id/txTacleAltoLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -120,7 +122,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView12"
+            android:id="@+id/txRetencionLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -128,7 +130,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView11"
+            android:id="@+id/txTirarseRuckLocal"
             android:gravity="center_vertical|center_horizontal" />
 
         <TextView
@@ -136,8 +138,17 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView35"
+            android:id="@+id/txTacleadorNoSueltaLocal"
             android:gravity="center_vertical|center_horizontal" />
+
+        <TextView
+            android:layout_width="133dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txTotalPenalesLocal"
+            android:gravity="center_vertical|center_horizontal|right"
+            android:textColor="#ff8e0006" />
 
     </LinearLayout>
 
@@ -145,7 +156,8 @@
         android:orientation="vertical"
         android:layout_width="174dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center_horizontal|top"
+        android:scrollbars="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -244,13 +256,23 @@
             android:id="@+id/textView28"
             android:layout_gravity="center_horizontal" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="   TOTAL"
+            android:id="@+id/textView8"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#ff8e0006" />
+
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="109dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="right|top">
+        android:layout_height="302dp"
+        android:layout_gravity="right|top"
+        android:scrollbars="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -263,7 +285,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView37"
+            android:id="@+id/txCargaSinPelotaVisitante"
             android:gravity="right" />
 
         <TextView
@@ -271,7 +293,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView38"
+            android:id="@+id/txDerrumbeMaulVisitante"
             android:gravity="right" />
 
         <TextView
@@ -279,7 +301,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView42"
+            android:id="@+id/txEntradaDeCostadoVisitante"
             android:gravity="right" />
 
         <TextView
@@ -287,7 +309,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView43"
+            android:id="@+id/txCagaLineVisitante"
             android:gravity="right" />
 
         <TextView
@@ -295,7 +317,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView41"
+            android:id="@+id/txManosEnElRuckVisistante"
             android:gravity="right" />
 
         <TextView
@@ -303,7 +325,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView47"
+            android:id="@+id/txOffsideVisitante"
             android:gravity="right" />
 
         <TextView
@@ -311,7 +333,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView45"
+            android:id="@+id/txScrumPenalVisitante"
             android:gravity="right" />
 
         <TextView
@@ -319,7 +341,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView40"
+            android:id="@+id/txTacleAltoVisitante"
             android:gravity="right" />
 
         <TextView
@@ -327,7 +349,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView48"
+            android:id="@+id/txRetencionVisitante"
             android:gravity="right" />
 
         <TextView
@@ -335,7 +357,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView44"
+            android:id="@+id/txTirarseEnRuckVisitante"
             android:gravity="right" />
 
         <TextView
@@ -343,8 +365,17 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
-            android:id="@+id/textView46"
+            android:id="@+id/txTacleadorNoSueltaVisitante"
             android:gravity="right" />
+
+        <TextView
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/txtotalpenalesVisitante"
+            android:gravity="left|right"
+            android:textColor="#ff8e0006" />
 
     </LinearLayout>
 
